--- a/SourceCode/2023/Nov2023/Shakeel/Task 11/Task 11.xaml
+++ b/SourceCode/2023/Nov2023/Shakeel/Task 11/Task 11.xaml
@@ -72,11 +72,12 @@
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="Task 11" sap:VirtualizedContainerService.HintSize="696,779" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
-      <Variable x:TypeArguments="x:String" Name="str_Userinput" />
+      <Variable x:TypeArguments="x:String" Name="Str_userinput" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+        <x:Boolean x:Key="IsPinned">False</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart sap2010:Annotation.AnnotationText="Based on the user input in numbers message box will display Fruit/Vegetable names" DisplayName="Fruits/Vegetables flowchart" sap:VirtualizedContainerService.HintSize="634,668" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -120,9 +121,9 @@
                 <av:PointCollection x:Key="ConnectorLocation">300,326 300,376</av:PointCollection>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Switch x:TypeArguments="x:String" DisplayName="Display message box based on Selection" Expression="[str_Userinput]" sap:VirtualizedContainerService.HintSize="200,52" sap2010:WorkflowViewState.IdRef="Switch`1_1">
+            <Switch x:TypeArguments="x:String" DisplayName="Display message box based on Selection" Expression="[str_Userinput]" sap:VirtualizedContainerService.HintSize="497,401" sap2010:WorkflowViewState.IdRef="Switch`1_1">
               <Switch.Default>
-                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;No Input provided - Blank Value&quot;]" />
+                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Show Error when no selection" sap:VirtualizedContainerService.HintSize="334,85" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;No Input provided - Blank Value&quot;]" />
               </Switch.Default>
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
