--- a/SourceCode/2023/Nov2023/Shakeel/Task 3/Main.xaml
+++ b/SourceCode/2023/Nov2023/Shakeel/Task 3/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="988,1898" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="988,2871" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:s="clr-namespace:System;assembly=System.Private.CoreLib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -80,9 +80,9 @@
       <AssemblyReference>UiPath.Platform</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="The task is for Date &amp; Time Variable" DisplayName="Date Time Sequence" sap:VirtualizedContainerService.HintSize="512,1833" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="The task is for Date &amp; Time Variable" DisplayName="Date Time Sequence" sap:VirtualizedContainerService.HintSize="512,2806" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
-      <Variable x:TypeArguments="s:DateTime" Name="d_Date" />
+      <Variable x:TypeArguments="s:DateTime" Name="dDate" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -93,20 +93,20 @@
     </sap:WorkflowViewStateService.ViewState>
     <Assign DisplayName="Assign - Date as Now" sap:VirtualizedContainerService.HintSize="450,82" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
-        <OutArgument x:TypeArguments="s:DateTime">[d_Date]</OutArgument>
+        <OutArgument x:TypeArguments="s:DateTime">[dDate]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="s:DateTime">[Now]</InArgument>
       </Assign.Value>
     </Assign>
-    <Sequence DisplayName="Long Date &amp; Time Sequence" sap:VirtualizedContainerService.HintSize="450,601" sap2010:WorkflowViewState.IdRef="Sequence_2">
+    <Sequence DisplayName="Long Date &amp; Time Sequence" sap:VirtualizedContainerService.HintSize="450,779" sap2010:WorkflowViewState.IdRef="Sequence_2">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:AppendLine File="{x:Null}" DisplayName="LongDate" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,133" sap2010:WorkflowViewState.IdRef="AppendLine_2" Text="[d_Date.ToLongDateString]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="LongDate" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,133" sap2010:WorkflowViewState.IdRef="AppendLine_2" Text="[dDate.ToLongDateString]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -114,7 +114,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="LongTime" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,133" sap2010:WorkflowViewState.IdRef="AppendLine_3" Text="[d_Date.ToLongTimeString]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="LongTime" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,133" sap2010:WorkflowViewState.IdRef="AppendLine_3" Text="[dDate.ToLongTimeString]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -122,31 +122,39 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:LogMessage DisplayName="Log Message- task completed" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Assign and store Long Date Time is completed&quot;]">
+      <ui:LogMessage DisplayName="Log Message- task completed" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Assign and store Long Date Time is completed&quot;]">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:LogMessage>
-      <ui:LogMessage DisplayName="Log msg LongDateTime" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[d_Date.ToLongDateString +&quot; &quot;+ d_Date.ToLongTimeString]">
+      <ui:LogMessage DisplayName="Log msg LongDateTime" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[dDate.ToLongDateString +&quot; &quot;+ dDate.ToLongTimeString]">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:LogMessage>
     </Sequence>
-    <Sequence DisplayName="To String along with ddd/dddd/tt/yyyy/ yy  Format Sequence" sap:VirtualizedContainerService.HintSize="450,807" sap2010:WorkflowViewState.IdRef="Sequence_5">
+    <Sequence DisplayName="To String along with ddd/dddd/tt/yyyy/ yy  Format Sequence" sap:VirtualizedContainerService.HintSize="450,1066" sap2010:WorkflowViewState.IdRef="Sequence_5">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:AppendLine File="{x:Null}" DisplayName="ToString" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_1" Text="[d_Date.ToString]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ToString" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,133" sap2010:WorkflowViewState.IdRef="AppendLine_1" Text="[dDate.ToString]" UseDefaultEncoding="False">
+        <sap:WorkflowViewStateService.ViewState>
+          <scg:Dictionary x:TypeArguments="x:String, x:Object">
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+            <x:Boolean x:Key="IsPinned">False</x:Boolean>
+          </scg:Dictionary>
+        </sap:WorkflowViewStateService.ViewState>
+      </ui:AppendLine>
+      <ui:AppendLine File="{x:Null}" DisplayName="ToString (ddd format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_6" Text="[dDate.ToString(&quot;ddd&quot;)]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -154,7 +162,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="ToString (ddd format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_6" Text="[d_Date.ToString(&quot;ddd&quot;)]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ToString (dddd format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_7" Text="[dDate.ToString(&quot;dddd&quot;)]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -162,7 +170,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="ToString (dddd format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_7" Text="[d_Date.ToString(&quot;dddd&quot;)]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ToString (tt format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_8" Text="[dDate.ToString(&quot;tt&quot;)]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -170,7 +178,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="ToString (tt format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_8" Text="[d_Date.ToString(&quot;tt&quot;)]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ToString (yyyy format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_9" Text="[dDate.ToString(&quot;yyyy&quot;)]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -178,7 +186,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="ToString (yyyy format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_9" Text="[d_Date.ToString(&quot;yyyy&quot;)]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ToString (yy format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_10" Text="[dDate.ToString(&quot;yy&quot;)]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -186,39 +194,31 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="ToString (yy format)" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_10" Text="[d_Date.ToString(&quot;yy&quot;)]" UseDefaultEncoding="False">
+      <ui:LogMessage DisplayName="Write Message - task completed" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Assign and store Date in different format is completed&quot;]">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-            <x:Boolean x:Key="IsPinned">False</x:Boolean>
-          </scg:Dictionary>
-        </sap:WorkflowViewStateService.ViewState>
-      </ui:AppendLine>
-      <ui:LogMessage DisplayName="Write Message - task completed" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="LogMessage_3" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Assign and store Date in different format is completed&quot;]">
-        <sap:WorkflowViewStateService.ViewState>
-          <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:LogMessage>
-      <ui:LogMessage DisplayName="Log msg ShortDateTime" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[d_Date.ToString+&quot; &quot;+d_Date.ToString(&quot;ddd&quot;)+&quot; &quot;+d_Date.ToString(&quot;dddd&quot;)+&quot; &quot;+d_Date.ToString(&quot;tt&quot;)+&quot; &quot;+d_Date.ToString(&quot;yyyy&quot;)+&quot; &quot;+d_Date.ToString(&quot;yy&quot;)]">
+      <ui:LogMessage DisplayName="Log msg ShortDateTime" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[dDate.ToString+&quot; &quot;+dDate.ToString(&quot;ddd&quot;)+&quot; &quot;+dDate.ToString(&quot;dddd&quot;)+&quot; &quot;+dDate.ToString(&quot;tt&quot;)+&quot; &quot;+dDate.ToString(&quot;yyyy&quot;)+&quot; &quot;+dDate.ToString(&quot;yy&quot;)]">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:LogMessage>
     </Sequence>
-    <Sequence DisplayName="Short Date &amp; Time Sequence" sap:VirtualizedContainerService.HintSize="450,81" sap2010:WorkflowViewState.IdRef="Sequence_3">
+    <Sequence DisplayName="Short Date &amp; Time Sequence" sap:VirtualizedContainerService.HintSize="450,617" sap2010:WorkflowViewState.IdRef="Sequence_3">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
-          <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           <x:Boolean x:Key="IsPinned">False</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:AppendLine File="{x:Null}" DisplayName="ShortDate" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_4" Text="[d_Date.ToShortDateString]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ShortDate" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_4" Text="[dDate.ToShortDateString]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -226,7 +226,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:AppendLine File="{x:Null}" DisplayName="ShortTime" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_5" Text="[d_Date.ToShortTimeString]" UseDefaultEncoding="False">
+      <ui:AppendLine File="{x:Null}" DisplayName="ShortTime" FileName="Date-Time_Task3.txt" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="AppendLine_5" Text="[dDate.ToShortTimeString]" UseDefaultEncoding="False">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -234,18 +234,18 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:AppendLine>
-      <ui:LogMessage DisplayName="Write ShortDateTime" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[d_Date.ToShortDateString+&quot; &quot;+d_Date.ToShortTimeString]">
+      <ui:LogMessage DisplayName="Log ShortDateTime" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[dDate.ToShortDateString+&quot; &quot;+dDate.ToShortTimeString]">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:LogMessage>
-      <ui:LogMessage DisplayName="Write Message - task completed" sap:VirtualizedContainerService.HintSize="388,52" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Assign and store Date in different format is completed&quot;]">
+      <ui:LogMessage DisplayName="Log Message - task completed" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Assign and store Date in different format is completed&quot;]">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+            <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             <x:Boolean x:Key="IsPinned">False</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
