--- a/SourceCode/2023/Nov2023/Pavankumar/task5/Main.xaml
+++ b/SourceCode/2023/Nov2023/Pavankumar/task5/Main.xaml
@@ -107,7 +107,7 @@
             <av:PointCollection x:Key="ConnectorLocation">300,209.2 300,259.2</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <Assign sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_1">
+        <Assign DisplayName="Integer" sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_1">
           <Assign.To>
             <OutArgument x:TypeArguments="ui:GenericValue">[Int]</OutArgument>
           </Assign.To>
@@ -129,7 +129,7 @@
                 <av:PointCollection x:Key="ConnectorLocation">300,340.79999999999995 300,390.79999999999995</av:PointCollection>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Assign sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_2">
+            <Assign DisplayName="String" sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_2">
               <Assign.To>
                 <OutArgument x:TypeArguments="ui:GenericValue">[Str]</OutArgument>
               </Assign.To>
@@ -151,7 +151,7 @@
                     <av:PointCollection x:Key="ConnectorLocation">300,472.4 300,522.4</av:PointCollection>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <Assign sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_3">
+                <Assign DisplayName="Result" sap:VirtualizedContainerService.HintSize="433.6,81.6" sap2010:WorkflowViewState.IdRef="Assign_3">
                   <Assign.To>
                     <OutArgument x:TypeArguments="x:String">[Result]</OutArgument>
                   </Assign.To>
